--- a/Style.css
+++ b/Style.css
@@ -15,6 +15,9 @@ html{
    right: 5%;
    
 }
+.Address_Style{
+    word-wrap: break-word;
+}
 @media screen and (max-width:767px){
     .btn_custom_class {
        display: block !important;
